--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,22 @@
 <html>
+    <head>
+        <title>
+            Priya-Article One
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/"> Home</a>
+        </div>
+        <hr/>
+        <div>
+            <h3>ARTICLE ONE</h3>
+        </div>
+        <div>
+            August 8,2017
+        </div>
+        <div>
+            <p>This is my first article</p>
+        </div>
+    </body>
 </html>
