[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,20 +3,31 @@
         <title>
             Priya-Article One
         </title>
+        <meta name ="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container{
+                max-width : 800 px;
+                margin : 0 auto;
+                color :green;
+                font-family : sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class = "container">
+           <div>
             <a href="/"> Home</a>
-        </div>
-        <hr/>
-        <div>
+           </div>
+           <hr/>
+           <div>
             <h3>ARTICLE ONE</h3>
-        </div>
-        <div>
+           </div>
+           <div>
             August 8,2017
-        </div>
-        <div>
+           </div>
+           <div>
             <p>This is my first article</p>
+           </div>
         </div>
     </body>
 </html>
