[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,11 +6,14 @@
         <meta name ="viewport" content="width=device-width, initial-scale=1" />
         <style>
             .container{
-                max-width : 800 px;
-                margin : 0 auto;
-                color :green;
-                font-family : sans-serif;
-            }
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: green;
+                    font-family: sans-serif;
+                    padding-top: 30px;
+                    padding-left: 40px;
+                    padding-right: 40px;
+                       }
         </style>
     </head>
     <body>
@@ -26,7 +29,7 @@
             August 8,2017
            </div>
            <div>
-            <p>This is my first article</p>
+            <p>This is my first article.I am excited to do this. I hope I do much more in this .. hahaha. This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.This is my first article.</p>
            </div>
         </div>
     </body>
