--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,16 +4,9 @@
             Priya-Article Two
         </title>
         <meta name ="viewport" content="width=device-width, initial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
         <style>
-            .container{
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: green;
-                    font-family: sans-serif;
-                    padding-top: 30px;
-                    padding-left: 40px;
-                    padding-right: 40px;
-                       }
+            
         </style>
     </head>
     <body>
