--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://scontent.fsin2-1.fna.fbcdn.net/v/t1.0-9/10409713_889387231075766_5040613785027595114_n.jpg?oh=d2a492ed8874e883b5908bc11cf3bea4&oe=59EE5AF1" class="img-medium"/>
+            <img src="https://scontent.fsin2-1.fna.fbcdn.net/v/t1.0-9/10409713_889387231075766_5040613785027595114_n.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
