[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,17 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class = "container">
         <div class="center">
-            <img src="https://image.ibb.co/eQwbPk/Priya.jpg" class="img-medium"/>
+            <img id = "priya" src="https://image.ibb.co/eQwbPk/Priya.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div class="center text-big bold">
+        <h3>Personal</h3>
+        <div id = "main-text" class="center text-big bold">
             Hi Priya ! I am your webapp.
         </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        </div>
+       
     </body>
 </html>
