[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,10 +9,17 @@
             <img id = "priya" src="https://image.ibb.co/eQwbPk/Priya.jpg" class="img-medium"/>
         </div>
         <hr/>
-        <br>
         <h3>Personal</h3>
-        <div id = "main-text" class="center text-big bold">
-            Hi Priya ! I am your webapp.
+        <div>
+            Hi all. I am Priya. I live in Singapore with my hubby and 2 children. I love my family. I like to spend time with them and friends. 
+        </div>
+        <hr/>
+        <h3>Professionall</h3>
+        <div>
+            Currently, I am a home maker and take care of my family. I used to work in TCS. I have an experience of 7+ years in software testing and have involoved in project management as well. 
+        </div>
+        <hr/>
+        <div class = "footer">
         </div>
         </div>
        
